# mango

./: .gitattributes  .gitignore  .gitmodules  404.html  README.md  data-intermediate-id.tar.zst  data-intermediate.tar.zst  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
contact/: index.html
data/: Zork_opposite_directions.txt  Zork_paths2verify.txt  Zork_valid_directions.txt  index.html  map.json  map.md  omniquest.actions  omniquest.all2all_paths.json  omniquest.all2all_shortest_paths.json  omniquest.map  release_status.csv  verify_results.json  zork1.actions  zork1.all2all_paths.json  zork1.all2all_paths.md  zork1.all2all_shortest_paths.json  zork1.all2all_shortest_paths.md  zork1.map  zork1.map.reversed  zork1.verify
data-backup/: release_status.csv
data-intermediate/: README.md  challenging_parsing.md
data_old/: map.json  map.md  omniquest.actions  omniquest.all2all_paths.md  omniquest.all2all_shortest_paths.json  omniquest.all2all_shortest_paths.md  omniquest.map  omniquest.map.reversed  zork1.map  zork1.map.reversed
docs/: contact.md  data.md  index.md  leaderboard.md
evals/: avg_acc.csv  cutoff_step_fjd.json  map_stats.json  map_stats_less_than_50.csv  map_stats_more_than_50.csv
evals_gpt@llama/: avg_acc.csv
evals_gpt@llama_anno/: avg_acc.csv  cutoff_step_gpt_llama_anno.json
evals_llama/: avg_acc.csv  cutoff_step_llama.json
evals_llama@llama_anno/: avg_acc.csv
evals_llama_anno@gpt/: avg_acc.csv
evals_llama_anno@llama/: avg_acc.csv  cutoff_step_llama_llama_anno.json
games/: all2all_uniqueness.py  check_annotation.py  check_uniqueness.py  code2anno.py  convert_csv_to_map_zork1.py  gen_map_machine_zork1.py  (+4 more)
(+77252 files in other folders)
